<resources>
<string name="app_name">Hype</string>
<string name="camera">Camera</string>
<string name="sms">SMS</string>
    <string name="mainmenu">Main Menu</string>
<string name="logout">Logout</string>
<string name="musicplayer">Music Player</string>
<string name="calculator">Calculator</string>
<string name="phonecall">Phone Call</string>
<string name="videoplayer">Video Player</string>
<string name="youtube">Youtube</string>
<string name="quiz">Quiz</string>
<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
